# owid-grapher-py

./: .gitignore  .readthedocs.yml  CLAUDE.md  Makefile  README.md  default.mk  llms-full.txt  llms.txt  pyproject.toml  zensical.toml
.github/workflows/: deploy-docs-cf.yml  publish.yml  python-package.yml
docs/: README.md  index.md
docs/api-reference/: chart.md  config.md  grapher.md  notebook.md  site.md
examples/: n_fastest_vaccinating.py  quickstart.ipynb  top_charts_2025.ipynb  top_charts_2025_simple.ipynb
owid/grapher/: __init__.py  chart.py  common.css  common.mjs  engine.py  export.py  grapher_state.py  grapher_to_py.py  internal.py  notebook.py  owid.css  owid.mjs  utils.py
owid/site/: __init__.py
public/: index.html  server.py
static/: commons.css  commons.js  owid.css  owid.js  owid.mjs  vendors.js
tests/: test_chart.py  test_engine.py  test_export.py  test_grapher.py  test_notebook.py  test_site.py
