[project]
name = "owid-grapher-py"
version = "0.1.5"
description = "OWID charts for rendering in Jupyter notebooks."
authors = [{name = "Lars Yencken", email = "lars@yencken.org"}]
requires-python = ">=3.9"
dependencies = [
    "dataclasses-json>=0.5.4",
    "requests>=2.25.1",
    "pandas>=1.3.0",
    "python-dateutil>=2.8.1",
    "jsonschema>=3.2.0",
    "click>=8.0.0",
]

[tool.uv]
dev-dependencies = [
    "watchdog>=2.1.3",
    "PyYAML>=5.4.1",
    "argh>=0.26.2",
    "pytest>=6.2.4",
    "types-python-dateutil>=0.1.4",
    "types-requests>=2.25.0",
    "nbformat>=5.1.3",
    "ruff>=0.0.278",
    "pyright>=1.1.317",
]

[tool.ruff]
lint.extend-select = ["I"]
lint.ignore = ["E501"]
line-length = 120
target-version = "py39"

[tool.pyright]
include = ["owid", "tests"]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owid"]
