[project]
name = "owid-grapher-py"
version = "0.3.1"
description = "OWID charts for rendering in Jupyter notebooks."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Lars Yencken", email = "lars@yencken.org" },
    { name = "Mojmir Vinkler", email = "mojmir@ourworldindata.org" },
]
keywords = [
    "owid",
    "data-visualization",
    "jupyter",
    "charts",
    "graphs",
    "ourworldindata",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.10"
dependencies = [
    "dataclasses-json>=0.6.7",
    "requests>=2.26.0",
    "pandas>=2.2.3",
    "python-dateutil>=2.8.1",
    "jsonschema>=3.2.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/owid/owid-grapher-py"
Repository = "https://github.com/owid/owid-grapher-py"
Documentation = "https://github.com/owid/owid-grapher-py#readme"
"Bug Tracker" = "https://github.com/owid/owid-grapher-py/issues"

[tool.uv]
dev-dependencies = [
    "watchdog>=2.1.3",
    "PyYAML>=5.4.1",
    "argh>=0.26.2",
    "pytest>=6.2.4",
    "types-python-dateutil>=0.1.4",
    "types-requests>=2.25.0",
    "nbformat>=5.1.3",
    "ruff>=0.0.278",
    "pyright>=1.1.317",
    "ipykernel>=6.31.0",
    "zensical>=0.0.11",
    "mkdocstrings[python]>=0.24.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "playwright>=1.40.0",
    "nest-asyncio>=1.5.0",
]

[tool.ruff]
lint.extend-select = ["I"]
lint.ignore = ["E501"]
target-version = "py310"

[tool.pyright]
include = ["owid", "tests"]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owid"]
